--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/AmineElazzab/Supratours_Reservation#readme",
   "dependencies": {
+    "@stripe/stripe-js": "^1.42.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -25,6 +26,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
     "nodemailer": "^6.8.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "stripe": "^10.15.0",
+    "uuid": "^9.0.0"
   }
 }
